tree-sitter-nexus/test/corpus/basics.txt
===============================================
Function definition - simple
===============================================

pub fn add(a: i64, b: i64) -> i64 do
  return a + b
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param name: (identifier) type: (primitive_type))
      (param name: (identifier) type: (primitive_type)))
    ret_type: (primitive_type)
    body: (return_stmt
      value: (binary_expr
        left: (variable name: (identifier))
        right: (variable name: (identifier))))))

===============================================
Function with effects
===============================================

fn main() -> unit effect { IO } do
  return ()
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    effects: (row_type (type_identifier))
    body: (return_stmt value: (literal (unit_literal)))))

===============================================
Let statement
===============================================

fn f() -> i64 do
  let x: i64 = 42
  return x
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (let_stmt
      name: (identifier)
      type: (primitive_type)
      value: (literal (integer_literal)))
    body: (return_stmt
      value: (variable name: (identifier)))))

===============================================
String literal [=[ ... ]=]
===============================================

fn greet() -> unit effect { IO } do
  let msg = [=[ hello world ]=]
  perform print(val: msg)
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    effects: (row_type (type_identifier))
    body: (let_stmt
      name: (identifier)
      value: (literal (string_literal)))
    body: (expr_stmt
      (perform_call
        func: (dotted_identifier (identifier))
        args: (labeled_arg
          label: (identifier)
          value: (variable name: (identifier)))))))

===============================================
Import definition
===============================================

import as math from "nxlib/math.nx"

-----------------------------------------------

(source_file
  (import_def
    alias: (identifier)
    path: (quoted_string)))

===============================================
Enum definition
===============================================

enum Shape {
  Circle(float),
  Rect(float, float),
  Point
}

-----------------------------------------------

(source_file
  (enum_def
    name: (identifier)
    (variant_def name: (identifier) (primitive_type))
    (variant_def name: (identifier) (primitive_type) (primitive_type))
    (variant_def name: (identifier))))

===============================================
Type definition
===============================================

type Point = { x: float, y: float }

-----------------------------------------------

(source_file
  (type_def
    name: (identifier)
    fields: (record_type
      (record_type_field name: (identifier) type: (primitive_type))
      (record_type_field name: (identifier) type: (primitive_type)))))

===============================================
Match expression
===============================================

fn describe(s: Shape) -> unit do
  match s do
    case Circle(r) ->
      return ()
    case Rect(w, h) ->
      return ()
    case _ ->
      return ()
  endmatch
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param name: (identifier) type: (type_identifier)))
    ret_type: (primitive_type)
    body: (match_stmt
      target: (variable name: (identifier))
      (match_case
        pattern: (constructor_pattern
          name: (identifier)
          (variable_pattern name: (identifier)))
        body: (return_stmt value: (literal (unit_literal))))
      (match_case
        pattern: (constructor_pattern
          name: (identifier)
          (variable_pattern name: (identifier))
          (variable_pattern name: (identifier)))
        body: (return_stmt value: (literal (unit_literal))))
      (match_case
        pattern: (wildcard_pattern)
        body: (return_stmt value: (literal (unit_literal)))))))

===============================================
If statement
===============================================

fn abs(x: i64) -> i64 do
  if x < 0 then
    return -1
  else
    return x
  endif
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param name: (identifier) type: (primitive_type)))
    ret_type: (primitive_type)
    body: (if_stmt
      cond: (binary_expr
        left: (variable name: (identifier))
        right: (literal (integer_literal)))
      then_branch: (return_stmt value: (literal (integer_literal)))
      else_branch: (return_stmt value: (variable name: (identifier))))))

===============================================
External function binding
===============================================

external add_ints: (a: i64, b: i64) -> i64 = "add"

-----------------------------------------------

(source_file
  (external_fn_def
    name: (identifier)
    type: (arrow_type
      param_label: (identifier)
      param_type: (primitive_type)
      param_label: (identifier)
      param_type: (primitive_type)
      ret: (primitive_type))
    wasm_name: (quoted_string)))

===============================================
Try / catch
===============================================

fn safe() -> unit do
  try
    return ()
  catch err ->
    return ()
  endtry
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (try_stmt
      body: (return_stmt value: (literal (unit_literal)))
      catch_param: (identifier)
      catch_body: (return_stmt value: (literal (unit_literal))))))

===============================================
Conc / task
===============================================

fn run() -> unit do
  conc do
    task "a" do
      return ()
    endtask
  endconc
  return ()
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (conc_stmt
      (task_def
        name: (quoted_string)
        body: (return_stmt value: (literal (unit_literal)))))
    body: (return_stmt value: (literal (unit_literal)))))

===============================================
Borrow expression
===============================================

fn f() -> unit do
  let b = borrow x
  return ()
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (let_stmt
      name: (identifier)
      value: (borrow_expr name: (identifier)))
    body: (return_stmt value: (literal (unit_literal)))))

===============================================
Raise expression
===============================================

fn fail() -> unit do
  raise [=[ error ]=]
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (expr_stmt
      (raise_expr
        value: (literal (string_literal))))))

===============================================
Let with mutable sigil and assignment
===============================================

fn counter() -> unit do
  let ~count: i64 = 0
  ~count <- 42
  return ()
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (primitive_type)
    body: (let_stmt
      sigil: (sigil)
      name: (identifier)
      type: (primitive_type)
      value: (literal (integer_literal)))
    body: (assign_stmt
      target: (variable sigil: (sigil) name: (identifier))
      value: (literal (integer_literal)))
    body: (return_stmt value: (literal (unit_literal)))))

===============================================
Generic function
===============================================

fn identity<T>(x: T) -> T do
  return x
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    type_params: (type_params (identifier))
    params: (param_list
      (param name: (identifier) type: (type_identifier)))
    ret_type: (type_identifier)
    body: (return_stmt
      value: (variable name: (identifier)))))

===============================================
Port definition
===============================================

port Logger do
  fn log(msg: string) -> unit
endport

-----------------------------------------------

(source_file
  (port_def
    name: (identifier)
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type))))

===============================================
Handler definition
===============================================

handler StdoutLogger for Logger do
  fn log(msg: string) -> unit do
    return ()
  endfn
endhandler

-----------------------------------------------

(source_file
  (handler_def
    name: (identifier)
    port_name: (identifier)
    (function_def
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Record pattern - partial match
===============================================

fn get_x(p: Point) -> float do
  match p do
    case { x: v, _ } ->
      return v
  endmatch
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param name: (identifier) type: (type_identifier)))
    ret_type: (primitive_type)
    body: (match_stmt
      target: (variable name: (identifier))
      (match_case
        pattern: (record_pattern
          field_name: (identifier)
          field_pattern: (variable_pattern name: (identifier))
          wildcard: (wildcard_pattern))
        body: (return_stmt
          value: (variable name: (identifier)))))))

===============================================
List with trailing comma
===============================================

fn nums() -> [i64] do
  return [1, 2, 3,]
endfn

-----------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list)
    ret_type: (list_type element: (primitive_type))
    body: (return_stmt
      value: (list_expr
        elements: (literal (integer_literal))
        elements: (literal (integer_literal))
        elements: (literal (integer_literal))))))
